--- a/index.html
+++ b/index.html
@@ -1,79 +1,50 @@
-<!DOCTYPE html>
-<html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Prova1 : " />
+<!doctype html>
+<html lang="pt-br">
+<head>
+	<meta charset="utf-8">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<title>Home </title>
+	<link rel="stylesheet" href="estilo.css" type="text/css">
 
-    <title>Prova1</title>
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lmabilio/prova1">View on GitHub</a>
+	<img src="imagens/banner.png" id="logo">
 
-          <h1 id="project_title">Prova1</h1>
-          <h2 id="project_tagline"></h2>
+	<div id="conteiner">
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lmabilio/prova1/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lmabilio/prova1/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+		<div id="menu">
+			<nav  id="lista">
+				<ul>
+					<li><a href="index.html" target="_self">Home</a></li>
+					<li><a href="selecoes.html" target="_self">Seleções</a>
+					<li><a href="mascote.html" target="_self">Mascote</a></li>
+					<li><a href="estadios.html" target="_self">Estádios</a></li>
+				</ul>
+			</nav>
+		</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		<div id="sidebar">
+			<img src="imagens/footer2.png" id="foto"> <br><br> 
+		</div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		<div id="noticia">
+			<h2>Ultimas Noticias</h2>
+			<ul>
+				<li><a href="http://www.portal2014.org.br/noticias/12401/COPA+2014+PODE+TER+MAIS+OITO+SELECOES+CLASSIFICADAS+NESTA+SEXTA.html" target="_blank">Copa 2014 tem 6 milhões de pedidos</a></li>
+				<li><a href="http://www.portal2014.org.br/noticias/12400/INFRAERO+ENTREGA+MELHORIAS+NO+TERMINAL+DO+AEROPORTO+DO+GALEAO.html" target="_blank">Copa pode ter mais oito seleções</a>
+				<li><a href="http://www.portal2014.org.br/noticias/12404/COPA+2014+FASE+INICIAL+DE+VENDAS+DE+ENTRADAS+TEM+6+MILHOES+DE+PEDIDOS.html" target="_blank">Aeroporto do Galeão tem melhorias</a></li>
+			</ul>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+		</div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+		<div id="footer">
+			<img src="imagens/footer.png" id="imgfoot"></img>
+		</div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+	</div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Prova1 maintained by <a href="https://github.com/lmabilio">lmabilio</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
